fixed bug on contact-me - white space at bottom of bg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,6 @@ main {
 #contact-bg {
     background: url(../images/contact-bg.webp) no-repeat center center;
     background-size: cover;
-    position: absolute;
     width: 100%;
     min-height: 100%;
 }
